fixed blur not showing up in certain browsers

--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,7 @@ header.scrolled a {
     height: 0;
     width: 300px;
     background: rgba(255, 255, 255, 0.1);
+    -webkit-backdrop-filter: blur(15px);
     backdrop-filter: blur(15px);
     border-radius: 10px;
     overflow: hidden;
@@ -153,6 +154,7 @@ header.scrolled a {
 
 .dropdown_menu.open {
     height: 240px;
+    backdrop-filter: blur(15px);
 }
 
 .dropdown_menu.open li a {
